[package]
name = "snowstorm"
version = "0.3.0"
edition = "2021"
authors = ["black-binary <blackbinary@qq.com>"]
license = "Apache-2.0"
repository = "https://github.com/black-binary/snowstorm"
readme = "README.md"
description = "A minimalistic encryption protocol"

[dependencies]
snow = "0.8"
thiserror = "1"
bytes = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["io-util", "time"] }
pin-project = "1"
log = "0.4"
scalable_cuckoo_filter = "0.2"
coarsetime = "0.1"
rand = "0.8"

[features]
default = ["stream", "socket"]
ring-accelerated = ["snow/ring-accelerated"]
libsodium-accelerated = ["snow/libsodium-accelerated"]
stream = []
socket = ["tokio/rt"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "stress"
harness = false
